fix: se ajusta el gap de icono segun diseño en figma

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -126,7 +126,7 @@ $icon-user-hover: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w
       .nav-icon {
         display: flex;
         align-items: center;
-        gap: 0.625rem; //este define horizontal y vertical
+        gap: 0.25rem; //Este gap define el espaciado en navegación vertical y horizontal
       }
     }
   }
@@ -290,7 +290,7 @@ $icon-user-hover: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w
 
         &.active,
         &:active {
-          //font-weight: $nav-link-font-weight;
+          //font-weight: $nav-link-simple-font-weight;
           color: $grisulado-900;
           text-shadow: 0px -1px 0px rgba(56, 72, 92, 1);
           background-color: transparent;
@@ -320,7 +320,7 @@ $icon-user-hover: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w
 
         .nav-icon {
           justify-content: center;
-          gap: $nav-link-padding-lg-y; //este define pestañas
+          gap: 0.625rem; //Este gap define el espaciado en pestañas
         }
       }
     }
